--- a/kelas12-3.html
+++ b/kelas12-3.html
@@ -82,10 +82,10 @@
     <ul>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSepHtIKc8e1aY2_WqzmJkrPLhLUdtHph65uFth0KkYa-S2-Cw/viewform?usp=header" target="_blank">Matematika Peminatan</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdTIAUXvyQNkcw4XM_nV-ga7QKnANQPmGf4tztmTi-HsVurkQ/viewform?usp=header" target="_blank">Al-Qur'an Hadist</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSeyR466bpa2rqWqKsrZQh8lofkKlorl35xRinhtz8zTFPaVdQ/viewform?usp=header" target="_blank">Biologi</a></li>
+        <li><a href="" target="_blank">Biologi</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdJSg_Tpu969K4xK3NtdMU7fSpykCOkvg9UB9PtWUS85jw4Sw/viewform?usp=dialog" target="_blank">Akidah Akhlak</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdHUWmWJwR5myITE2-g0oqp09ElCS_9gJqRVSqlzlqgkhan-w/viewform?usp=header" target="_blank">Kimia</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdWpV5So8pU8-R0T_M-bzLxUtfeMmOO7-lVLSHKb6h6So1syA/viewform?usp=sharing" target="_blank">Fikih</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSeoe5Dvyd2aeIk001Cgnhbvkj1IF1_zjj4Tg6qsal9QXQLeDw/viewform?usp=dialog" target="_blank">Fikih</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSeYeXS_4V_PXAgfwPpbbO0BABmWOZqiXLEkrJUetuBbbOpCHA/viewform?usp=header" target="_blank">Fisika</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSd7SQ-41BVNXFNwte_bOzZ5noq6rzHw5NQpVfQ8ZFhcoPhalQ/viewform?usp=header" target="_blank">Sejarah Kebudayaan Islam</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSeYY4WiF5B68bVU4_LP97ce4LtrTxF1cAU5JnVG4cnkt-Ep2g/viewform?usp=header" target="_blank">Bahasa Arab</a></li>
@@ -99,4 +99,5 @@
     </ul>
 </body>
 </html>
+
 
