--- a/kelas10-3.html
+++ b/kelas10-3.html
@@ -80,26 +80,28 @@
 <body>
     <h1>Mata Pelajaran Kelas 10-3</h1>
     <ul>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSeKH9wGiYDxLtKYCLP03MhAmn6LOWk10nvcR7xwW3-Dw5KHJQ/viewform?usp=sharing&ouid=101735385110807286218" target="_blank">Ekonomi</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSfJb9dJ69sGaJKs0NnJjMPiX_NM7_g_z9Kbb6n5HxAWHAmOBw/viewform?usp=dialog" target="_blank">Bahasa Inggris</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSc5Ls2jUcrrwNm5uEwA7-w9i_8D1Ix1_tp3SUNEGQkwrKxpAA/viewform?usp=dialog" target="_blank">Seni Budaya</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdgkU8xz5IAYK1jKs7mfy-0vbte9XZj92xdomAUlao_BwIezg/viewform?usp=header" target="_blank">Sejarah Indonesia</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScH7iKdlktG2b5V6HB_tPv8xdm4jR7F0HJ46aG5Zes5G2_zIg/viewform?usp=dialog" target="_blank">Informatika</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSe-xEKCOFx6mxZygwMppS-VOOocX6fiSFbN2mGlSaeuCMWgFg/viewform?usp=dialog" target="_blank">Sejarah Kebudayaan Islam</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdjaREOzT_fI8m0yCWkOvhxLmDtEzXIoqH6pGuoJj1kjYo20A/viewform?usp=dialog" target="_blank">Qur'an Hadist</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSeHBIvXOeGMmMYqZDD7bJaAx0fQyAwoFR1utqomdSKHpWbabg/viewform?usp=dialog" target="_blank">Fisika</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSc0p28ZwlvPRasacIqHyIkAc-6Gfmv-NbVKAjA-H7GecNVPEw/viewform?usp=dialog" target="_blank">Ekonomi</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSfJhVZFidO8IlKHsLiw6leqeevxHR5pogFiO9ddq3umraBACA/viewform?usp=dialog" target="_blank">Bahasa Inggris</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdIxpoxOe1zUAAsbi4rsftoFzYPP2X15WUj6yc4BKGsBZiX6w/viewform?usp=dialog" target="_blank">Koding KA</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSff9y0DoXinRNgrFvXmuYNh0e98S2Wl5Eb1oYyPg-RQ6tJdmA/viewform?usp=dialog" target="_blank">Sejarah Indonesia</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdQgJLUaj1N5NS28G4f4i8uNpnH4QGzvrVgnQ0b-WvazGG67A/viewform?usp=dialog" target="_blank">Informatika</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdzzqLUJ0ePbQ_pHselMDT7v5H3e6IgJq8qXWIPVUHPIr88KA/viewform?usp=dialog" target="_blank">Sejarah Kebudayaan Islam</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSfhNWhCBif4uGgLCG3gs5RaEiYY0sKD_Etonu405vrLCWZbQA/viewform?usp=dialog" target="_blank">Qur'an Hadist</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSe8bJsHiXWD9u5isaX8GZ7AlyF1OyZKZgctAc1F1u-ROmWZGA/viewform?usp=dialog" target="_blank">Fisika</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSejYSELk9x9wR93EKcGkYXWFQ0V9OQZlWPSGITvidLy6q_vpA/viewform?usp=dialog" target="_blank">Biologi</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdcP1ZuHKY1tpNkSdBwkGoh7kva81qqfpm3Txxj99-pF7_WHQ/viewform?usp=dialog" target="_blank">Bahasa Indonesia</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSfHlKEsws5plADRWKoDoQic3VmpVxBWZR5aToDhGrpnS7Zolg/viewform?usp=dialog" target="_blank">PKN</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdXwOiAdyOcmtPJ3IfEv27hWnuGnzPwXCZFLR1v3KjZKVWlFg/viewform?usp=dialog" target="_blank">Sosiologi</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScvznk2Er2oQx2iDJhAeyAP-h1nLEND_WcpFTxiicJUrrxXqw/viewform?usp=dialog" target="_blank">Kimia</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScBKrgFtLh9x9Fnu9TXSdq5CwXvGHRz5MnfgLjOYo3FPfAFSg/viewform?usp=dialog" target="_blank">Matematika Wajib</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScU-Ydp0lA1Mxne7hWbcttbJrvmJ3BA5eF5gsoHt29KI_vecQ/viewform?usp=dialog" target="_blank">Bahasa Indonesia</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSfN70l9J3_D0eji6Bwre1uZYTlyDM3YbTbAHWjL7Z5ntokcrQ/viewform?usp=dialog" target="_blank">PKN</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSeKngI1GaDLO7T79zRmKRl0FjWjYWWzoWcBmooKRvqBv4P6pg/viewform?usp=dialog" target="_blank">Sosiologi</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScvznk2Er2oQx2iDJhAeyAP-h1nLEND_WcpFTxiicJUrrxXqw/viewform?usp=dialog" target="_blank">Kimia </a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSeGiq6DnTCSW7og3W1_UM5VOgMFsBhacI-33CrmnSTbn03Cnw/viewform?usp=dialog" target="_blank">Bahasa Arab </a></li>
+        <li><a href="hhttps://docs.google.com/forms/d/e/1FAIpQLSd1q8rSJNUnu9JI2fYXIrxz8MTjNKiFl7IbY06JhdNCT0fHzw/viewform?usp=dialog" target="_blank">Matematika_Wajib</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSccvuLIt1pJgBUNgo9ESv8Y2N0LswaBCGPmTMQHSGaaT5_e_g/viewform?usp=sharing&ouid=101735385110807286218" target="_blank">Fikih</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSfhO1LNf4ZnBvmrXK8aGlvC-CGe63PQVIcd1DNLpkkbK3vZQw/viewform?usp=sharing&ouid=101735385110807286218" target="_blank">Akidah Akhlak</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdCL1Mj4JD63H4AQZfUYLm9lZflcBVktKVsVV-s4_b0wWkWZQ/viewform?usp=dialog" target="_blank">Geografi</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSc-ZqGlO3e1rhM8UlE7agLPrIptS3yOl6Shqb-kjgWfkMFbBA/viewform?usp=dialog" target="_blank">PJOK</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSeQcabn1PEhndWNVCnom_buIYt76Kpk6NgUbIi-HHOsQlluRg/viewform?usp=dialog" target="_blank">Geografi</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdeiHI8Z2XUJ5zfOJN8DTCpfIuvdLiGBbbKv_Jx86ngXnR_Ug/viewform?usp=dialog" target="_blank">PJOK</a></li>
     </ul>
 </body>
 </html>
+
 
 
