--- a/kelas12-3.html
+++ b/kelas12-3.html
@@ -80,24 +80,25 @@
 <body>
     <h1>Mata Pelajaran Kelas 12-3</h1>
     <ul>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSepHtIKc8e1aY2_WqzmJkrPLhLUdtHph65uFth0KkYa-S2-Cw/viewform?usp=header" target="_blank">Matematika Peminatan</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdTIAUXvyQNkcw4XM_nV-ga7QKnANQPmGf4tztmTi-HsVurkQ/viewform?usp=header" target="_blank">Al-Qur'an Hadist</a></li>
-        <li><a href="" target="_blank">Biologi</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScJwoOGD2Jht42ZiTaSD9TqZMzggE5qyQZJDLeIx6XbIcIzzA/viewform?usp=dialog" target="_blank">Al-Qur'an Hadist</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdJSg_Tpu969K4xK3NtdMU7fSpykCOkvg9UB9PtWUS85jw4Sw/viewform?usp=dialog" target="_blank">Akidah Akhlak</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdHUWmWJwR5myITE2-g0oqp09ElCS_9gJqRVSqlzlqgkhan-w/viewform?usp=header" target="_blank">Kimia</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSeoe5Dvyd2aeIk001Cgnhbvkj1IF1_zjj4Tg6qsal9QXQLeDw/viewform?usp=dialog" target="_blank">Fikih</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSeYeXS_4V_PXAgfwPpbbO0BABmWOZqiXLEkrJUetuBbbOpCHA/viewform?usp=header" target="_blank">Fisika</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSd7SQ-41BVNXFNwte_bOzZ5noq6rzHw5NQpVfQ8ZFhcoPhalQ/viewform?usp=header" target="_blank">Sejarah Kebudayaan Islam</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSeYY4WiF5B68bVU4_LP97ce4LtrTxF1cAU5JnVG4cnkt-Ep2g/viewform?usp=header" target="_blank">Bahasa Arab</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSePSsX9qyaa8uLj62dXgjCwg_AtCxM3WHO5nJfdPVgrBK8stg/viewform?usp=header" target="_blank">Matematika Wajib</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSff_2Pt3ZsXlLm8FmJeq2xHqDpFo3-0j5iqcis2KS6_uf_B5Q/viewform?usp=sharing" target="_blank">PKN</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSd_4zjx4k_8d1l2RleTrcVF3j7W_D_c7wix0oetDVlMiR2-nA/viewform?usp=dialog" target="_blank">Bahasa Indonesia</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSc_ycy9_jaVPeNcFV5mortSjdq_gmOTW6f-ZZ2aDQ-6L4zj6Q/viewform?usp=header" target="_blank">Bahasa Inggris</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdo7uAeixHNTStAM3W7DUxNnjwDcv-xWm8hrydswe3ezvgkrA/viewform?usp=header" target="_blank">Geografi</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScOuRVaUsCA75rxrmWYhRmZwTxnFO_wz-2sf-ULRuDCE5N_FQ/viewform?usp=sharing" target="_blank">Ekonomi</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScmtIiLy-N6DyWxtB7xO9pXyDrJWU7plctToBxWTt1JIrDZAw/viewform?usp=dialog" target="_blank">Sejarah Indonesia</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSeyh0EOsWFAXsNzEY4qc6_mWCCtCcY7AcuZ-HZsS9jAICiwBA/viewform?usp=dialog" target="_blank">Sejarah Kebudayaan Islam</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSf3f4D5XUtJWMQCSKJqfuMnqTo6_iq0o9Ny7Snkd3D-2b-ipg/viewform?usp=dialog" target="_blank">Bahasa Arab</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScyDpF89C7sy8c_N3einyZO9alwpOzrG29lI2kb4tddfe3yiA/viewform?usp=dialog" target="_blank">Matematika Wajib</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSexA-6aYaXSOj1CQoeeKWqZAYsZDlWMwgAZnCb9gvTt-YXxjw/viewform?usp=dialog" target="_blank">PKN</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScurrHjw6euckhiPHyyhXt4fEY7RE7SUQQhExWgz6MatSqJ0A/viewform?usp=dialog" target="_blank">Bahasa Indonesia</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScybXsw-Xsi6iVpyyFjen45Y-4YDquYZhG4pfiR1x7P5PYlAA/viewform?usp=dialog" target="_blank">Bahasa Inggris Wajib</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSc10vMZ_UJLtqRK0xF7Mlxnox_Bs3Ha45V7i9gr1ZmAINqn5w/viewform?usp=sharing&ouid=101735385110807286218" target="_blank">Bahasa Inggris Tingkat Lanjut Kelas 12-3</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdyDgE5-oU41v0vyHuJlhXPrWLCnBehp8nRW_GKGZtaWtDmMQ/viewform?usp=dialog" target="_blank">Geografi kelas 12-2 dan 12-3</a></li>
+        <li><a href="" target="_blank">Ekonomi kelas 11-1 dan 11-3</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdUe_FjcAljxj-Q2txQZ3xJOIwn3x_PCCEpQStxfoiaXGOWQw/viewform?usp=dialog" target="_blank">Sejarah Indonesia</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdnAadMQjpEYTXIzUJEbb4lZzaVaM-W2kYicL2Ify8L3VZ3Cw/viewform?usp=dialog" target="_blank">Sosiologi kelas 12-3</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSeba-8rBD8Ih1grJqOAB3Zgcg1FGvAn_iCQkmblmn9DTUZNdA/viewform?usp=dialog" target="_blank">PJOK</a></li>
     </ul>
 </body>
 </html>
+
 
 
