--- a/kelas11-2.html
+++ b/kelas11-2.html
@@ -92,13 +92,14 @@
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdxJYFstjacQtaZwcHNAYmbmIV--lS4P-XjgVu4ZrV9wG4M_g/viewform?usp=sf_link" target="_blank">Kimia</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScmBHzxireN8zGfa0XABQ7n-sHIGyKqaTIM2rXEMxHV2fj0ZA/viewform?usp=dialog" target="_blank">Matematika Wajib kelas 11-2 dan 11-3 dan 11-4</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSd1zEY_hPSOd3FisJFKQPBOftcG4_pQSFRtwZ2QyMZI-AqP5g/viewform?usp=dialog" target="_blank">Fikih</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdQjsNJNGUpT3zke47e_shfwYE4EVXiLT7sq2-FWIy_ZnffDA/viewform?usp=dialog" target="_blank">Matematika Tingkat Lanjuk kelas 11-2 dan 11-3</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdQjsNJNGUpT3zke47e_shfwYE4EVXiLT7sq2-FWIy_ZnffDA/viewform?usp=dialog" target="_blank">Matematika Tingkat Lanjut kelas 11-2 dan 11-3</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScJlVqS5-iu85BmIdGSXcYHYgEJe9FU0YH5t08PamiSxe4Cdg/viewform?usp=dialog" target="_blank">Akidah Akhlak</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSfBm8ugcHxrFMFXGN7QwninqU6DE_A8lgkJ6wouiWoti5KxaQ/viewform?usp=dialog" target="_blank">Seni Budaya</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScbtmsc0mn1r8f-YvHOB1JmjnYpr423UMV8XVTDMzDNS-ISBQ/viewform?usp=dialog" target="_blank">PJOK</a></li>
     </ul>
 </body>
 </html>
+
 
 
 
