--- a/kelas11-2.html
+++ b/kelas11-2.html
@@ -80,25 +80,26 @@
 <body>
     <h1>Mata Pelajaran Kelas 11-2</h1>
     <ul>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSfOf75F6IYS11h0EJTDMzGhF9V-xoiC-L0r57MhY5StE6tFKg/viewform?usp=dialog" target="_blank">Ekonomi kelas 11-2</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSfOf75F6IYS11h0EJTDMzGhF9V-xoiC-L0r57MhY5StE6tFKg/viewform?usp=dialog" target="_blank">Ekonomi</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSeRKBTwPJj9ijtzV4_mDP46XzvS_71ms4MAGTTvlCSuvv3c9Q/viewform?usp=sharing&ouid=101735385110807286218" target="_blank">Bahasa_Inggris</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScIoPO9vvZ63JeG9GUGW21PRq-vApLi5gKOfsYuyNOZ9T2v9Q/viewform?usp=dialog" target="_blank">Bahasa Arab</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSewVTPEvhyFNwKR52JlkmgqYldqYSQxhHSmDhMWUewCL60aZg/viewform?usp=dialog" target="_blank">Sejarah Indonesia</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSeSR9elJp51S157zGYGf3g2TmyMWtdjoL28C6ctIAYL4d9MIg/viewform?usp=dialog" target="_blank">Sejarah Kebudayaan Islam</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSf3nXUWZ1BfrAOwaMKq9kiwyjzMu43xrOTiQH_cs4-6kj9tHg/viewform?usp=dialog" target="_blank">Al-Qur'an_Hadist</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSe0v5X__Vy8xSaYjmjKn_7sZGp9PNbVerFknkRuP5X-u1CK4w/viewform?usp=dialog" target="_blank">Biologi kelas 11-2 dan 11-3</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSe0v5X__Vy8xSaYjmjKn_7sZGp9PNbVerFknkRuP5X-u1CK4w/viewform?usp=dialog" target="_blank">Biologi</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSf1CUZsiasOKkGLjOtAs0ejhUJcG3eavecS3gsicVoopsFr6A/viewform?usp=dialog" target="_blank">Bahasa Indonesia</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSfw1OzipG_DI5q-8xuUWIZtGqKvtYih3GeGyC-35BFtFo8OIQ/viewform?usp=dialog" target="_blank">PKN</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdxJYFstjacQtaZwcHNAYmbmIV--lS4P-XjgVu4ZrV9wG4M_g/viewform?usp=sf_link" target="_blank">Kimia</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScmBHzxireN8zGfa0XABQ7n-sHIGyKqaTIM2rXEMxHV2fj0ZA/viewform?usp=dialog" target="_blank">Matematika Wajib kelas 11-2 dan 11-3 dan 11-4</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScmBHzxireN8zGfa0XABQ7n-sHIGyKqaTIM2rXEMxHV2fj0ZA/viewform?usp=dialog" target="_blank">Matematika Wajib</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSd1zEY_hPSOd3FisJFKQPBOftcG4_pQSFRtwZ2QyMZI-AqP5g/viewform?usp=dialog" target="_blank">Fikih</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdQjsNJNGUpT3zke47e_shfwYE4EVXiLT7sq2-FWIy_ZnffDA/viewform?usp=dialog" target="_blank">Matematika Tingkat Lanjut kelas 11-2 dan 11-3</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdQjsNJNGUpT3zke47e_shfwYE4EVXiLT7sq2-FWIy_ZnffDA/viewform?usp=dialog" target="_blank">Matematika Tingkat Lanjut</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScJlVqS5-iu85BmIdGSXcYHYgEJe9FU0YH5t08PamiSxe4Cdg/viewform?usp=dialog" target="_blank">Akidah Akhlak</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSfBm8ugcHxrFMFXGN7QwninqU6DE_A8lgkJ6wouiWoti5KxaQ/viewform?usp=dialog" target="_blank">Seni Budaya</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScbtmsc0mn1r8f-YvHOB1JmjnYpr423UMV8XVTDMzDNS-ISBQ/viewform?usp=dialog" target="_blank">PJOK</a></li>
     </ul>
 </body>
 </html>
+
 
 
 
