--- a/kelas11-3.html
+++ b/kelas11-3.html
@@ -80,7 +80,7 @@
 <body>
     <h1>Mata Pelajaran Kelas 11-3</h1>
     <ul>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScRG7lRvHoDdnn6iZ0c83anmYGGNrBTYvLIuf_mvtq2SJeh-w/viewform?usp=dialog" target="_blank">Ekonomi kelas 11-3 dan 11-4</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScRG7lRvHoDdnn6iZ0c83anmYGGNrBTYvLIuf_mvtq2SJeh-w/viewform?usp=dialog" target="_blank">Ekonomi</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSeRKBTwPJj9ijtzV4_mDP46XzvS_71ms4MAGTTvlCSuvv3c9Q/viewform?usp=sharing&ouid=101735385110807286218" target="_blank">Bahasa_Inggris</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScIoPO9vvZ63JeG9GUGW21PRq-vApLi5gKOfsYuyNOZ9T2v9Q/viewform?usp=dialog" target="_blank">Bahasa Arab</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSewVTPEvhyFNwKR52JlkmgqYldqYSQxhHSmDhMWUewCL60aZg/viewform?usp=dialog" target="_blank">Sejarah Indonesia</a></li>
@@ -90,15 +90,16 @@
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSf1CUZsiasOKkGLjOtAs0ejhUJcG3eavecS3gsicVoopsFr6A/viewform?usp=dialog" target="_blank">Bahasa Indonesia</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSfw1OzipG_DI5q-8xuUWIZtGqKvtYih3GeGyC-35BFtFo8OIQ/viewform?usp=dialog" target="_blank">PKN</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdxJYFstjacQtaZwcHNAYmbmIV--lS4P-XjgVu4ZrV9wG4M_g/viewform?usp=sf_link" target="_blank">Kimia</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScmBHzxireN8zGfa0XABQ7n-sHIGyKqaTIM2rXEMxHV2fj0ZA/viewform?usp=dialog" target="_blank">Matematika Wajib kelas 11-2 dan 11-3 dan 11-4</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScmBHzxireN8zGfa0XABQ7n-sHIGyKqaTIM2rXEMxHV2fj0ZA/viewform?usp=dialog" target="_blank">Matematika Wajib</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSd1zEY_hPSOd3FisJFKQPBOftcG4_pQSFRtwZ2QyMZI-AqP5g/viewform?usp=dialog" target="_blank">Fikih</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdQjsNJNGUpT3zke47e_shfwYE4EVXiLT7sq2-FWIy_ZnffDA/viewform?usp=dialog" target="_blank">Matematika Tingkat Lanjut kelas 11-2 dan 11-3</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdQjsNJNGUpT3zke47e_shfwYE4EVXiLT7sq2-FWIy_ZnffDA/viewform?usp=dialog" target="_blank">Matematika Tingkat Lanjut</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScJlVqS5-iu85BmIdGSXcYHYgEJe9FU0YH5t08PamiSxe4Cdg/viewform?usp=dialog" target="_blank">Akidah Akhlak</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSfBm8ugcHxrFMFXGN7QwninqU6DE_A8lgkJ6wouiWoti5KxaQ/viewform?usp=dialog" target="_blank">Seni Budaya</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScbtmsc0mn1r8f-YvHOB1JmjnYpr423UMV8XVTDMzDNS-ISBQ/viewform?usp=dialog" target="_blank">PJOK</a></li>
     </ul>
 </body>
 </html>
+
 
 
 
