--- a/kelas11-1.html
+++ b/kelas11-1.html
@@ -85,20 +85,21 @@
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSewVTPEvhyFNwKR52JlkmgqYldqYSQxhHSmDhMWUewCL60aZg/viewform?usp=dialog" target="_blank">Sejarah Indonesia</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSeSR9elJp51S157zGYGf3g2TmyMWtdjoL28C6ctIAYL4d9MIg/viewform?usp=dialog" target="_blank">Sejarah Kebudayaan Islam</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSf3nXUWZ1BfrAOwaMKq9kiwyjzMu43xrOTiQH_cs4-6kj9tHg/viewform?usp=dialog" target="_blank">Al-Qur'an_Hadist</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScHlXhYaoxzJYL1xKiWHj4FzqpWOER4Q-ei07iePKT3rknG9w/viewform?usp=dialog" target="_blank">Fisika kelas 11-1</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScHlXhYaoxzJYL1xKiWHj4FzqpWOER4Q-ei07iePKT3rknG9w/viewform?usp=dialog" target="_blank">Fisika</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSf1CUZsiasOKkGLjOtAs0ejhUJcG3eavecS3gsicVoopsFr6A/viewform?usp=dialog" target="_blank">Bahasa Indonesia</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScZh5Jr5--WZ9osag47O8fZ-Xj6KD-_sBWvKdRC23V6VXUEvQ/viewform?usp=dialog" target="_blank">Informatika kelas 11-1</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScZh5Jr5--WZ9osag47O8fZ-Xj6KD-_sBWvKdRC23V6VXUEvQ/viewform?usp=dialog" target="_blank">Informatika</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSfw1OzipG_DI5q-8xuUWIZtGqKvtYih3GeGyC-35BFtFo8OIQ/viewform?usp=dialog" target="_blank">PKN</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdxJYFstjacQtaZwcHNAYmbmIV--lS4P-XjgVu4ZrV9wG4M_g/viewform?usp=sf_link" target="_blank">Kimia</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSejLfIh3gG8wjSzuO12LCp6Qet0Pyp7bye-8uAX_icTyEUskA/viewform?usp=dialog" target="_blank">Matematika Wajib kelas 11-1</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSejLfIh3gG8wjSzuO12LCp6Qet0Pyp7bye-8uAX_icTyEUskA/viewform?usp=dialog" target="_blank">Matematika Wajib</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSd1zEY_hPSOd3FisJFKQPBOftcG4_pQSFRtwZ2QyMZI-AqP5g/viewform?usp=dialog" target="_blank">Fikih</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdDnUWsQVB7d5eClWnda-GbiL3z9rDKVpco-fS_Hz-IY6Sfsg/viewform?usp=dialog" target="_blank">Matematika Tingkat Lanjuk kelas 11-1</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdDnUWsQVB7d5eClWnda-GbiL3z9rDKVpco-fS_Hz-IY6Sfsg/viewform?usp=dialog" target="_blank">Matematika Tingkat Lanjuk kelas</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScJlVqS5-iu85BmIdGSXcYHYgEJe9FU0YH5t08PamiSxe4Cdg/viewform?usp=dialog" target="_blank">Akidah Akhlak</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSfBm8ugcHxrFMFXGN7QwninqU6DE_A8lgkJ6wouiWoti5KxaQ/viewform?usp=dialog" target="_blank">Seni Budaya</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScbtmsc0mn1r8f-YvHOB1JmjnYpr423UMV8XVTDMzDNS-ISBQ/viewform?usp=dialog" target="_blank">PJOK</a></li>
     </ul>
 </body>
 </html>
+
 
 
 
