--- a/kelas11-3.html
+++ b/kelas11-3.html
@@ -86,7 +86,7 @@
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSewVTPEvhyFNwKR52JlkmgqYldqYSQxhHSmDhMWUewCL60aZg/viewform?usp=dialog" target="_blank">Sejarah Indonesia</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSeSR9elJp51S157zGYGf3g2TmyMWtdjoL28C6ctIAYL4d9MIg/viewform?usp=dialog" target="_blank">Sejarah Kebudayaan Islam</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSf3nXUWZ1BfrAOwaMKq9kiwyjzMu43xrOTiQH_cs4-6kj9tHg/viewform?usp=dialog" target="_blank">Al-Qur'an_Hadist</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSe0v5X__Vy8xSaYjmjKn_7sZGp9PNbVerFknkRuP5X-u1CK4w/viewform?usp=dialog" target="_blank">Biologi kelas 11-2 dan 11-3</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSe0v5X__Vy8xSaYjmjKn_7sZGp9PNbVerFknkRuP5X-u1CK4w/viewform?usp=dialog" target="_blank">Biologi</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSf1CUZsiasOKkGLjOtAs0ejhUJcG3eavecS3gsicVoopsFr6A/viewform?usp=dialog" target="_blank">Bahasa Indonesia</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSfw1OzipG_DI5q-8xuUWIZtGqKvtYih3GeGyC-35BFtFo8OIQ/viewform?usp=dialog" target="_blank">PKN</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdxJYFstjacQtaZwcHNAYmbmIV--lS4P-XjgVu4ZrV9wG4M_g/viewform?usp=sf_link" target="_blank">Kimia</a></li>
@@ -99,6 +99,7 @@
     </ul>
 </body>
 </html>
+
 
 
 
