--- a/kelas12-1.html
+++ b/kelas12-1.html
@@ -92,13 +92,14 @@
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSexA-6aYaXSOj1CQoeeKWqZAYsZDlWMwgAZnCb9gvTt-YXxjw/viewform?usp=dialog" target="_blank">PKN</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScurrHjw6euckhiPHyyhXt4fEY7RE7SUQQhExWgz6MatSqJ0A/viewform?usp=dialog" target="_blank">Bahasa Indonesia</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScybXsw-Xsi6iVpyyFjen45Y-4YDquYZhG4pfiR1x7P5PYlAA/viewform?usp=dialog" target="_blank">Bahasa Inggris Wajib</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSeb4jSDf24AzAq6yZ8cmI2TCGaNQRQqBC6JzPlWRNBx38vsAQ/viewform?usp=dialog" target="_blank">Ekonomi kelas 11-1 dan 11-3</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSeb4jSDf24AzAq6yZ8cmI2TCGaNQRQqBC6JzPlWRNBx38vsAQ/viewform?usp=dialog" target="_blank">Ekonomi</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdUe_FjcAljxj-Q2txQZ3xJOIwn3x_PCCEpQStxfoiaXGOWQw/viewform?usp=dialog" target="_blank">Sejarah Indonesia</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdnAadMQjpEYTXIzUJEbb4lZzaVaM-W2kYicL2Ify8L3VZ3Cw/viewform?usp=dialog" target="_blank">Sosiologi kelas 12-3</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSeba-8rBD8Ih1grJqOAB3Zgcg1FGvAn_iCQkmblmn9DTUZNdA/viewform?usp=dialog" target="_blank">PJOK</a></li>
     </ul>
 </body>
 </html>
+
 
 
 
