--- a/kelas12-3.html
+++ b/kelas12-3.html
@@ -92,13 +92,14 @@
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScybXsw-Xsi6iVpyyFjen45Y-4YDquYZhG4pfiR1x7P5PYlAA/viewform?usp=dialog" target="_blank">Bahasa Inggris Wajib</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSc10vMZ_UJLtqRK0xF7Mlxnox_Bs3Ha45V7i9gr1ZmAINqn5w/viewform?usp=sharing&ouid=101735385110807286218" target="_blank">Bahasa Inggris Tingkat Lanjut Kelas 12-3</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdyDgE5-oU41v0vyHuJlhXPrWLCnBehp8nRW_GKGZtaWtDmMQ/viewform?usp=dialog" target="_blank">Geografi kelas 12-2 dan 12-3</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSeb4jSDf24AzAq6yZ8cmI2TCGaNQRQqBC6JzPlWRNBx38vsAQ/viewform?usp=dialog" target="_blank">Ekonomi kelas 11-1 dan 11-3</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSeb4jSDf24AzAq6yZ8cmI2TCGaNQRQqBC6JzPlWRNBx38vsAQ/viewform?usp=dialog" target="_blank">Ekonomi</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdUe_FjcAljxj-Q2txQZ3xJOIwn3x_PCCEpQStxfoiaXGOWQw/viewform?usp=dialog" target="_blank">Sejarah Indonesia</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdnAadMQjpEYTXIzUJEbb4lZzaVaM-W2kYicL2Ify8L3VZ3Cw/viewform?usp=dialog" target="_blank">Sosiologi kelas 12-3</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSeba-8rBD8Ih1grJqOAB3Zgcg1FGvAn_iCQkmblmn9DTUZNdA/viewform?usp=dialog" target="_blank">PJOK</a></li>
     </ul>
 </body>
 </html>
+
 
 
 
