--- a/kelas10-1.html
+++ b/kelas10-1.html
@@ -94,7 +94,7 @@
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSeKngI1GaDLO7T79zRmKRl0FjWjYWWzoWcBmooKRvqBv4P6pg/viewform?usp=dialog" target="_blank">Sosiologi</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScvznk2Er2oQx2iDJhAeyAP-h1nLEND_WcpFTxiicJUrrxXqw/viewform?usp=dialog" target="_blank">Kimia </a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSeGiq6DnTCSW7og3W1_UM5VOgMFsBhacI-33CrmnSTbn03Cnw/viewform?usp=dialog" target="_blank">Bahasa Arab </a></li>
-        <li><a href="hhttps://docs.google.com/forms/d/e/1FAIpQLSd1q8rSJNUnu9JI2fYXIrxz8MTjNKiFl7IbY06JhdNCT0fHzw/viewform?usp=dialog" target="_blank">Matematika_Wajib</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSd1q8rSJNUnu9JI2fYXIrxz8MTjNKiFl7IbY06JhdNCT0fHzw/viewform?usp=dialog" target="_blank">Matematika_Wajib</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSccvuLIt1pJgBUNgo9ESv8Y2N0LswaBCGPmTMQHSGaaT5_e_g/viewform?usp=sharing&ouid=101735385110807286218" target="_blank">Fikih</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSfhO1LNf4ZnBvmrXK8aGlvC-CGe63PQVIcd1DNLpkkbK3vZQw/viewform?usp=sharing&ouid=101735385110807286218" target="_blank">Akidah Akhlak</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSeQcabn1PEhndWNVCnom_buIYt76Kpk6NgUbIi-HHOsQlluRg/viewform?usp=dialog" target="_blank">Geografi</a></li>
@@ -102,6 +102,7 @@
     </ul>
 </body>
 </html>
+
 
 
 
