--- a/kelas12-1.html
+++ b/kelas12-1.html
@@ -80,25 +80,26 @@
 <body>
     <h1>Mata Pelajaran Kelas 12-1</h1>
     <ul>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdeANnsXF45OHQUlizBSLQeYFSOeqjaqDFF2lQJ3efInoGiZw/viewform?usp=dialog" target="_blank">Matematika Tingkat Lanjut kelas 12-1 dan 12-2</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScJwoOGD2Jht42ZiTaSD9TqZMzggE5qyQZJDLeIx6XbIcIzzA/viewform?usp=dialog" target="_blank">Al-Qur'an Hadist</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSd84uWh2BEhaBwqyulCLc9zIMU5637Q4N9FnJtTVIA0LRejBw/viewform?usp=dialog" target="_blank">Biologi kelas 11-1</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdJSg_Tpu969K4xK3NtdMU7fSpykCOkvg9UB9PtWUS85jw4Sw/viewform?usp=dialog" target="_blank">Akidah Akhlak</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdHUWmWJwR5myITE2-g0oqp09ElCS_9gJqRVSqlzlqgkhan-w/viewform?usp=header" target="_blank">Kimia</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSeoe5Dvyd2aeIk001Cgnhbvkj1IF1_zjj4Tg6qsal9QXQLeDw/viewform?usp=dialog" target="_blank">Fikih</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSeyh0EOsWFAXsNzEY4qc6_mWCCtCcY7AcuZ-HZsS9jAICiwBA/viewform?usp=dialog" target="_blank">Sejarah Kebudayaan Islam</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSf3f4D5XUtJWMQCSKJqfuMnqTo6_iq0o9Ny7Snkd3D-2b-ipg/viewform?usp=dialog" target="_blank">Bahasa Arab</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScyDpF89C7sy8c_N3einyZO9alwpOzrG29lI2kb4tddfe3yiA/viewform?usp=dialog" target="_blank">Matematika Wajib</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSexA-6aYaXSOj1CQoeeKWqZAYsZDlWMwgAZnCb9gvTt-YXxjw/viewform?usp=dialog" target="_blank">PKN</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScurrHjw6euckhiPHyyhXt4fEY7RE7SUQQhExWgz6MatSqJ0A/viewform?usp=dialog" target="_blank">Bahasa Indonesia</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScybXsw-Xsi6iVpyyFjen45Y-4YDquYZhG4pfiR1x7P5PYlAA/viewform?usp=dialog" target="_blank">Bahasa Inggris Wajib</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSeb4jSDf24AzAq6yZ8cmI2TCGaNQRQqBC6JzPlWRNBx38vsAQ/viewform?usp=dialog" target="_blank">Ekonomi</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdUe_FjcAljxj-Q2txQZ3xJOIwn3x_PCCEpQStxfoiaXGOWQw/viewform?usp=dialog" target="_blank">Sejarah Indonesia</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdnAadMQjpEYTXIzUJEbb4lZzaVaM-W2kYicL2Ify8L3VZ3Cw/viewform?usp=dialog" target="_blank">Sosiologi kelas 12-3</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSeba-8rBD8Ih1grJqOAB3Zgcg1FGvAn_iCQkmblmn9DTUZNdA/viewform?usp=dialog" target="_blank">PJOK</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSftWRs7jbQqkfObuz9biUQ6Ycn6boysOEwBQ6ANdZ7-fF7LUQ/viewform?usp=sharing&ouid=101735385110807286218" target="_blank">Matematika Tingkat Lanjut kelas 12-1 dan 12-2</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScfZqlTJhAUTq1a_UuN2pS8k-utX1WmMO2fbqI3jkxaDsvYkw/viewform?usp=sharing&ouid=101735385110807286218" target="_blank">Al-Qur'an Hadist</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSehhTeCBPowk36Yh6VBKlT5XlDFHTCo9bhitdMgJbETrTMgcQ/viewform?usp=sharing&ouid=101735385110807286218" target="_blank">Biologi kelas 11-1</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScFHEokmai6j-6lG3mBLq2BK4ZntQsiuG1UIuSuu9zT8CWZ0w/viewform?usp=sharing&ouid=101735385110807286218" target="_blank">Akidah Akhlak</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSf8BWbSKNc7BjWzfv4s_tw9zHIgeHNYQCwiryXWjQe65ea1vg/viewform?usp=sharing&ouid=101735385110807286218" target="_blank">Kimia</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSch2ctQMAc65f82fGW5klsl9usY3vdv3oGhoh04iBiG_HcfGQ/viewform?usp=sharing&ouid=101735385110807286218" target="_blank">Fikih</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScjcc9EhXcdXeiB2LFuA7ip5umCQgKfyaT3zLpbkdOiRMmR_g/viewform?usp=sharing&ouid=101735385110807286218" target="_blank">Sejarah Kebudayaan Islam</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSeYX6qGre1OaKzWzX77jG6dcNALejUOPWVewYZIAW4DRsUBzQ/viewform?usp=sharing&ouid=101735385110807286218" target="_blank">Bahasa Arab</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSfedesZXftP5TvHgbHcRETF_CnK8hG8vebz-y2ILebGCmo-pA/viewform?usp=sharing&ouid=101735385110807286218" target="_blank">Matematika Wajib</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScTzVHQy-rt3uISBcRhzaCXRdkkgq89VqEZBKWZWvAW-rWRQw/viewform?usp=sharing&ouid=101735385110807286218" target="_blank">PKN</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScia49Sl6-aF4tbWE0OZNK_W_YS-f259F-TWDHfknnI2BK4CA/viewform?usp=sharing&ouid=101735385110807286218" target="_blank">Bahasa Indonesia</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScGguatCFFqUPIcg0UogF4k6ohRbUaukp3kKnDR1tudbZJUFA/viewform?usp=sharing&ouid=101735385110807286218" target="_blank">Bahasa Inggris Wajib</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSeom8jDghglLjN7lvmTJYeGC7nWAIutjyvfoH0QAQxmLIfu5w/viewform?usp=sharing&ouid=101735385110807286218" target="_blank">Ekonomi</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdWCKJadbGU3DwWk640BC5WxzuhV9xCVB7qxpM0GV6-Qg0X6Q/viewform?usp=sharing&ouid=101735385110807286218" target="_blank">Sejarah Indonesia</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSeJsNdWhzQGzgCMQn5I4qQG3qoAHEZcKF8XvbeW5IASOASfnQ/viewform?usp=sharing&ouid=101735385110807286218" target="_blank">Sosiologi kelas 12-3</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdpGOaZKqn-8RMP2CFyobdbffOAC8sv_V4PinDKbjyZUtVTDQ/viewform?usp=sharing&ouid=101735385110807286218" target="_blank">PJOK</a></li>
     </ul>
 </body>
 </html>
+
 
 
 
