--- a/kelas12-1.html
+++ b/kelas12-1.html
@@ -91,13 +91,14 @@
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScGguatCFFqUPIcg0UogF4k6ohRbUaukp3kKnDR1tudbZJUFA/viewform?usp=sharing&ouid=101735385110807286218" target="_blank">Bahasa Inggris Wajib</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdWCKJadbGU3DwWk640BC5WxzuhV9xCVB7qxpM0GV6-Qg0X6Q/viewform?usp=sharing&ouid=101735385110807286218" target="_blank">Sejarah Indonesia</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdpGOaZKqn-8RMP2CFyobdbffOAC8sv_V4PinDKbjyZUtVTDQ/viewform?usp=sharing&ouid=101735385110807286218" target="_blank">PJOK</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSftWRs7jbQqkfObuz9biUQ6Ycn6boysOEwBQ6ANdZ7-fF7LUQ/viewform?usp=sharing&ouid=101735385110807286218" target="_blank">Matematika Tingkat Lanjut kelas 12-1 dan 12-2</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSehhTeCBPowk36Yh6VBKlT5XlDFHTCo9bhitdMgJbETrTMgcQ/viewform?usp=sharing&ouid=101735385110807286218" target="_blank">Biologi kelas 11-1</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSftWRs7jbQqkfObuz9biUQ6Ycn6boysOEwBQ6ANdZ7-fF7LUQ/viewform?usp=sharing&ouid=101735385110807286218" target="_blank">Matematika Tingkat Lanjut</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSehhTeCBPowk36Yh6VBKlT5XlDFHTCo9bhitdMgJbETrTMgcQ/viewform?usp=sharing&ouid=101735385110807286218" target="_blank">Biologi</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSf8BWbSKNc7BjWzfv4s_tw9zHIgeHNYQCwiryXWjQe65ea1vg/viewform?usp=sharing&ouid=101735385110807286218" target="_blank">Kimia</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSeom8jDghglLjN7lvmTJYeGC7nWAIutjyvfoH0QAQxmLIfu5w/viewform?usp=sharing&ouid=101735385110807286218" target="_blank">Ekonomi</a></li>
     </ul>
 </body>
 </html>
+
 
 
 
